# opencl-labs

./: .gitignore
lab1/: CMakeLists.txt  convolute.cl  main.cpp
lab1/cmake/: FindOpenCL.cmake
lab2/: CMakeLists.txt  main.cpp
lab2/kernels/: scan.cl
